# todui

./: Cargo.toml  DELETE_FUNCTIONALITY.md  GUI_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INDENTATION_FEATURES.md  README.md  REFACTORING_SUMMARY.md  TEXT_WRAPPING.md  TODO-2025-08-14.md  TODO-2025-08-15.md  TODO-2025-08-16.md  TODO-2025-08-18.md  UNICODE_SUPPORT.md  demo.md  requirements.md  test_long.md
src/: main.rs
src/gui/: mod.rs
src/tui/: mod.rs
ui/: appwindow.slint
