[package]
name = "todui"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.28"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
slint = "1.12"
clap = { version = "4.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.12"

[dev-dependencies]
tempfile = "3.8"
